--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "echarts": "^5.4.3",
         "fingerprintjs2": "^2.1.4",
         "js-calendar-converter": "^0.0.6",
+        "js-cookie": "^3.0.5",
         "jsencrypt": "^3.3.2",
         "lodash": "^4.17.21",
         "mavon-editor": "3.0.1",
