--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "js-calendar-converter": "^0.0.6",
         "js-cookie": "^3.0.5",
         "jsencrypt": "^3.3.2",
+        "less-loader": "^11.1.3",
         "lodash": "^4.17.21",
         "mavon-editor": "3.0.1",
         "mint-filter": "^4.0.3",
